feat: improve ui layout and add suggestion queries

--- a/veritas-chat/.env.example
+++ b/veritas-chat/.env.example
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_VERTITAS_ASK_API=http://localhost:8000/api/ask-mock
+NEXT_PUBLIC_VERTITAS_ASK_API=http://localhost:8000/api/conversation
+NEXT_PUBLIC_VERTITAS_HEALTH_API=http://localhost:8000/api/health
+NEXT_PUBLIC_PORTFOLIO_URL=http://localhost:5173/
